// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`manifest-driven builder > matches the argument array snapshot for an identity edit 1`] = `
[
  "-v",
  "error",
  "-nostdin",
  "-n",
  "-stats_period",
  "0.25",
  "-ss",
  "0.500000",
  "-autorotate",
  "-i",
  "/in/source.mp4",
  "-thread_queue_size",
  "1",
  "-f",
  "image2pipe",
  "-framerate",
  "30000/1001",
  "-c:v",
  "png",
  "-i",
  "pipe:0",
  "-filter_complex",
  "[0:v:0]fps=fps=30000/1001:start_time=0,scale=1080:1920:force_original_aspect_ratio=decrease:force_divisible_by=2:reset_sar=1,pad=1080:1920:(ow-iw)/2:(oh-ih)/2,setsar=1[v];[v][1:v:0]overlay=0:0:alpha=straight:format=auto:eof_action=endall:shortest=1,format=yuv420p[outv];[0:a:0]aresample=48000:async=1:first_pts=0,apad,atrim=duration=5.000000[outa]",
  "-map",
  "[outv]",
  "-map",
  "[outa]",
  "-c:a",
  "aac",
  "-b:a",
  "192k",
  "-ar",
  "48000",
  "-ac",
  "2",
  "-c:v",
  "h264_videotoolbox",
  "-allow_sw",
  "1",
  "-profile:v",
  "high",
  "-b:v",
  "8M",
  "-pix_fmt",
  "yuv420p",
  "-r",
  "30000/1001",
  "-fps_mode",
  "cfr",
  "-frames:v",
  "150",
  "-t",
  "5.000000",
  "-map_metadata",
  "-1",
  "-metadata:s:v:0",
  "rotate=0",
  "-movflags",
  "+faststart",
  "-f",
  "mp4",
  "-progress",
  "pipe:1",
  "/out/dest.mp4.tmp",
]
`;

exports[`manifest-driven builder > matches the filtergraph snapshot with and without audio > with-audio 1`] = `
{
  "filterComplex": "[0:v:0]fps=fps=30000/1001:start_time=0,scale=1080:1920:force_original_aspect_ratio=decrease:force_divisible_by=2:reset_sar=1,pad=1080:1920:(ow-iw)/2:(oh-ih)/2,setsar=1[v];[v][1:v:0]overlay=0:0:alpha=straight:format=auto:eof_action=endall:shortest=1,format=yuv420p[outv];[0:a:0]aresample=48000:async=1:first_pts=0,apad,atrim=duration=5.000000[outa]",
  "hasAudioOut": true,
  "maps": [
    "-map",
    "[outv]",
    "-map",
    "[outa]",
  ],
}
`;

exports[`manifest-driven builder > matches the filtergraph snapshot with and without audio > without-audio 1`] = `
{
  "filterComplex": "[0:v:0]fps=fps=30000/1001:start_time=0,scale=1080:1920:force_original_aspect_ratio=decrease:force_divisible_by=2:reset_sar=1,pad=1080:1920:(ow-iw)/2:(oh-ih)/2,setsar=1[v];[v][1:v:0]overlay=0:0:alpha=straight:format=auto:eof_action=endall:shortest=1,format=yuv420p[outv]",
  "hasAudioOut": false,
  "maps": [
    "-map",
    "[outv]",
  ],
}
`;
